--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
     <h1>My Frist Github Repo</h1>
     <p>tmr name ki</p>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo facere vel recusandae cumque earum ab rem accusantium amet reprehenderit reiciendis! Quaerat quo porro eaque iure repellat consectetur fugit ipsam totam.</p>
+    <div>
+        <img src="images/318494788_159623766803395_4891151172464534488_n.jpg" alt="">
+    </div>
 </body>
 </html>
