--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nemo facere vel recusandae cumque earum ab rem accusantium amet reprehenderit reiciendis! Quaerat quo porro eaque iure repellat consectetur fugit ipsam totam.</p>
     <div>
         <img src="images/318494788_159623766803395_4891151172464534488_n.jpg" alt="">
+        <img src="images/353425606_245753768190394_6477873112917825894_n.jpg" alt="">
     </div>
 </body>
 </html>
